--- a/tema2.html
+++ b/tema2.html
@@ -5,12 +5,9 @@
 
 <title>Ejercicios</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
-<style>
-    .menu-link {
-  color: #F00; /* Rojo */
-  font-size: 28px;
-}
-</style>
+
+
+
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -15213,9 +15210,15 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
     display: none;
   }
 </style>
+<style>
+    .menu-link {
+  color: #F00; /* Rojo */
+  font-size: 28px;
+}
+</style>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-
+  <br><center><button><a href="index.html" class="menu-link">Regresar al menú principal</a></button></center> <br><br>
 <div id="cell-id=a2536a20-c29f-4491-8162-3070cbd502f9" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15292,10 +15295,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_9></div>  
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_9></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 9</span><div id=ex_9></div>
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 9</span><div id=ex_9></div></p>
 <p><strong>Sólo para practicar.</strong> Los números telefónicos en la ciudad de Cuernavaca, Morelos, constan de siete dígitos.</p>
 <p><strong>a) ¿Cuántas líneas telefónicas pueden crearse en esa ciudad? Recuerda que no pueden comenzar con cero.</strong></p>
 <p><strong>b) Si los tres primeros dígitos representan una zona de Cuernavaca, ¿cuántas líneas telefónicas pertenecen a la zona 326?</strong></p>
@@ -15462,28 +15464,15 @@ $$</p>
 </div>
 
 </div>
-<div id="cell-id=27c047d1-31d2-43e9-b3dc-1c29b410a2dc" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=bfe855dd" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_10></div>  
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_10></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 10</span><div id=ex_10></div>
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 10</span><div id=ex_10></div></p>
 <p><strong>Sólo para practicar.</strong> Se tiene la palabra MURCIÉLAGO. Si no se permiten repeticiones al usar
 las letras que la forman, determina:</p>
 <p><strong>a) El número de palabras que puedes crear.</strong></p>
@@ -15737,31 +15726,18 @@ $$</p>
 </div>
 
 </div>
-<div id="cell-id=27c0b1f9-7c7f-474c-bd59-5c6ae18f87ef" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=0c560faa" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_11></div> 
-
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 11</span><div id=ex_11></div><br />
-<strong>Parque vehicular.</strong> La Ciudad de México tiene placas de automóviles con tres números seguidos
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_11></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 11</span><div id=ex_11></div>  
+**Parque vehicular.** La Ciudad de México tiene placas de automóviles con tres números seguidos
 por tres letras, es decir, son placas del tipo 999-AAA. Sin embargo, no pueden empezar con 0
-(cero) ni se utilizan las letras I, O, Q y Ñ.</p>
+(cero) ni se utilizan las letras I, O, Q y Ñ.
+
 <p><strong>a) ¿Cuántas placas diferentes son posibles?</strong></p>
 <p><strong>b) ¿Cuántas placas diferentes terminan en vocal?</strong></p>
 <p><strong>c) ¿Cuál es la probabilidad de que una placa, elegida al azar, sea impar?</strong></p>
@@ -16003,29 +15979,16 @@ Por lo tanto, la probabilidad de elegir al azar una placa que sea impar es del <
 </div>
 
 </div>
-<div id="cell-id=9c3be07f-2f95-45e6-b1dc-7ffcfa5d6fb6" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=3682bc12" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_12></div> 
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_12></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 12</span><div id=ex_12></div>  
+**Servicios restauranteros.** Una cadena de hamburguesas anuncia que se ofrecen 512 maneras de pedir una hamburguesa. Un cliente puede elegir cualquiera de estos ingredientes: cátsup, mostaza, mayonesa, aderezo de la casa, cebolla, pepinillos, jitomate, tocino y lechuga.
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 12</span><div id=ex_12></div><br />
-<strong>Servicios restauranteros.</strong> Una cadena de hamburguesas anuncia que se ofrecen 512 maneras de pedir una hamburguesa. Un cliente puede elegir cualquiera de estos ingredientes: cátsup, mostaza, mayonesa, aderezo de la casa, cebolla, pepinillos, jitomate, tocino y lechuga.</p>
 <p><strong>¿Crees que lo que afirma la empresa sea cierto?</strong> Justifica tu respuesta.</p>
 
 </div>
@@ -16125,32 +16088,19 @@ La afirmacion del restaurante es correcta al utilizar todos esos ingredientes y 
 </div>
 
 </div>
-<div id="cell-id=2cae4bfd-aefb-4ab8-8775-c57ceaef2bc0" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=882d4a23" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_13></div> 
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_13></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 13</span><div id=ex_13></div>  
+**Cultura.** Una persona tiene un libro de cada uno de los autores siguientes: Mario Vargas Llosa, 
+Alberto Ruy Sánchez, Gabriel García Márquez, Günther Grass, Patrick Süskind, Heinrich Böll, 
+Arturo Pérez-Reverte y Camilo José Cela. Como aún no los ha leído, quiere ponerlos en una 
+repisa cerca de su cama. De acuerdo con esto, determina:  
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 13</span><div id=ex_13></div><br />
-<strong>Cultura.</strong> Una persona tiene un libro de cada uno de los autores siguientes: Mario Vargas Llosa,
-Alberto Ruy Sánchez, Gabriel García Márquez, Günther Grass, Patrick Süskind, Heinrich Böll,
-Arturo Pérez-Reverte y Camilo José Cela. Como aún no los ha leído, quiere ponerlos en una
-repisa cerca de su cama. De acuerdo con esto, determina:</p>
 <p><strong>a) ¿De cuántas formas puede acomodar los libros sobre la repisa?</strong></p>
 <p><strong>b) ¿De cuántas maneras puede ordenarlos si quiere que los libros de autores latinoamericanos
 estén juntos?</strong></p>
@@ -16447,28 +16397,13 @@ El porcentaje es:
 </div>
 
 </div>
-<div id="cell-id=8fd31c5c-cf3a-43ff-9a40-d64cd348011e" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=4571001d-e0a4-45f7-8ed6-22bfdaffa1c4" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_14></div> 
-
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 14</span><div id=ex_14></div><br />
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 14</span><div id=ex_14></div><br />
 <strong>Finanzas.</strong> Se va a formar un portafolio de inversión de cuatro instrumentos financieros a partir
 de cinco de renta fija y seis de renta variable. ¿De cuántas maneras podría formarse el portafolio
 si:</p>
@@ -16894,31 +16829,18 @@ La probabilidad del inciso d): 0.182
 </div>
 
 </div>
-<div id="cell-id=150f6bed-8423-4f45-82f1-70448542d53e" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=78823f4b" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_15></div> 
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_15></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 15</span><div id=ex_15></div>  
+**Futbol.** Tres parejas (tres hombres y tres mujeres) compran boletos para ir a un partido de los 
+Pumas. Cuando llegan al estadio de Ciudad Universitaria les surge la duda de cómo sentarse en 
+la fila. ¿De cuántas maneras pueden hacerlo si:   
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 15</span><div id=ex_15></div><br />
-<strong>Futbol.</strong> Tres parejas (tres hombres y tres mujeres) compran boletos para ir a un partido de los
-Pumas. Cuando llegan al estadio de Ciudad Universitaria les surge la duda de cómo sentarse en
-la fila. ¿De cuántas maneras pueden hacerlo si:</p>
 <p><strong>a) No hay restricciones?</strong></p>
 <p><strong>b) Los hombres deben sentarse juntos?</strong></p>
 <p><strong>c) Deben sentarse por parejas?</strong></p>
@@ -17209,28 +17131,15 @@ Probabilidad de inciso c:
 </div>
 
 </div>
-<div id="cell-id=84ab0279-e010-4bd9-89ce-e5bdbb698495" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=e390fd6f-b47e-49e2-a77f-0eada998015b" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_16></div>  
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_16></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 16</span><div id=ex_16></div>
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 16</span><div id=ex_16></div></p>
 <p><strong>Trabajo en equipo.</strong> En un grupo de 25 alumnos hay 13 chicas y 12 chicos. Se desean formar
 equipos de trabajo para realizar una investigación:</p>
 <p><strong>a) ¿Cuántos equipos de cinco personas pueden formarse?</strong></p>
@@ -17573,28 +17482,15 @@ La probabilidad del inciso c): 0.323
 </div>
 
 </div>
-<div id="cell-id=c1c4029d-9c7f-4bd9-a4d3-a7baa9592216" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
 <div id="cell-id=b8cf7637-2765-4613-a816-0f293e701b40" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id=ex_17></div>  
+<h2 id="%5BRegresar-al-Men%C3%BA%5D"><a href="#Menu">[Regresar al Men&#250;]</a><a class="anchor-link" href="#%5BRegresar-al-Men%C3%BA%5D">&#182;</a></h2><div id=ex_17></div> 
+<span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 17</span><div id=ex_17></div>
 
-<hr />
-<p><span style="color: #61C2FF; font-size: 23px; font-weight: 600;">Ejercicio 17</span><div id=ex_17></div></p>
 <p><strong>Control de calidad.</strong> Se tiene una caja con 24 latas y se sabe que dos están contaminadas. Se van
 a seleccionar tres latas al azar para someterlas a una prueba de control de calidad, es decir, para
 medir los estándares de calidad de la empresa.</p>
@@ -17928,18 +17824,12 @@ Entonces, la probabilidad para el inciso <strong>d)</strong> es de <strong>0.761
 </div>
 
 </div>
-<div id="cell-id=f27da831-0fde-4e88-86a6-3c420c613f78" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><a href="#Menu">[Regresar al Menú]</a></p>
-
-</div>
-</div>
-</div>
-</div>
-<br><br><center><button><a href="index.html" class="menu-link">Regresar al menú principal</a></button></center>
 </body>
+
+
+
+
+
+
+
 </html>
