Se agrego el link del curso DATAQUEST

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Temario PE</title>
 </head>
 <body>
+    <SEction>
+    <h1 style="text-align: center;">Link del Curso DATAQUEST</h1>
+<center><a href="http://app.dataquest.io/profile/230110032" class="boton-frecuencias">LINK</a></center>
+</SEction>
     <h1  style="text-align: center;">Tema 1 Estadística descriptiva</h1> 
 
     <section> <h2>1.1 Conceptos básicos de estadística</h2>
